Heavily improve pathfinding performance and revamp entire free and solid block system